kubernetes/cms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: c2e
  name: cms
spec:
  selector:
    matchLabels:
      app: cms
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
      - name: cms
        image: quay.io/yesidevelop/cms:latest
        ports:
        - containerPort: 2000


---
apiVersion: v1
kind: Service
metadata:
  name: cms
  namespace: c2e
spec:
  selector:
    app: cms
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 2000
