kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: c2e
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: quay.io/curriki/webapp:latest
        ports:
        - containerPort: 3000


---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: c2e
spec:
  selector:
    app: webapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
