kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: c2e-gateway
  namespace: c2e
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.specification.curriki.org
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c2e
  namespace: c2e
spec:
  hosts:
  - api.specification.curriki.org
  gateways:
  - c2e-gateway.c2e.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /cms
    route:
    - destination:
        host: cms
        port:
          number: 80
