kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c2e
  namespace: c2e
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: specification.curriki.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
