kubernetes/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-istio-ingress
  namespace: c2e
spec:
  ingressClassName: kong
  rules:
  - host: api.specification.curriki.org
    http:
      paths:
      - path: /cms
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 80
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: media
            port:
              number: 80
      - path: /authoring
        pathType: Prefix
        backend:
          service:
            name: authoring
            port:
              number: 80
